--- a/aumento de fe/aumento-de-fe.html
+++ b/aumento de fe/aumento-de-fe.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="aumento-de-fe.css">
 </head>
 <body>
-    <a href="pregaçao/pagina-inicial.html">Pregações</a>
-    <a href="biblia/biblia.html">Biblia</a>
-
+<span>
+   <h2>Pregação</h2>
+   <h2>Biblia</h2>
+</span>
+<div>
+<a href="pregaçao/pagina-inicial.html"><img src="pregaçao/pregaçoes.jpg" alt=""></a>
+<a href="biblia/biblia.html"><img src="biblia/bíblia.jpg" alt=""></a>
+</div>
 </body>
 </html>
