--- a/aumento de fe/biblia/geneses/cap1.html
+++ b/aumento de fe/biblia/geneses/cap1.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="geneses.css">
 </head>
 <body>
-    <h1>geneses 1:</h1>
+    <h1>Genesés 1:</h1>
     <h2>A criação dos céus e da terra e de tudo o que neles há</h2>
 <p>1 No princípio, criou Deus os céus e a terra. <br> <br>
     2 A terra, porém, estava sem forma e vazia; havia trevas sobre a face do abismo, e o Espírito de Deus pairava por sobre as águas. <br><br>
@@ -42,7 +42,7 @@
     31 Viu Deus tudo quanto fizera, e eis que era muito bom. Houve tarde e manhã, o sexto dia.</p>
       
       <div><a href="cap2.html"><img src="seta.png" alt=""></a></div>
-
+   <a href="#"><img src="Design sem nome.png" alt=""></a>
 
 
 
