--- a/copio-so-nao-faço-igual/tela-copia.html
+++ b/copio-so-nao-faço-igual/tela-copia.html
@@ -12,5 +12,6 @@
     <div>  <a href="cmsp/cmsp.html">CmSp</a></div>
     <div>  <a href="netflix/netflix.html">NETFLIX</a></div>
     <div>  <a href="teste.html">Testes DEV</a></div>
+    <div>  <a href="sproutGigs/tela-inicial.html">SproutGigs</a></div>
 </body>
 </html>
