--- a/copio-so-nao-faço-igual/abstract/abstract.html
+++ b/copio-so-nao-faço-igual/abstract/abstract.html
@@ -9,7 +9,16 @@
 </head>
 <body>
     <header>
-        <h2>Abstract</h2> <h2>Help Center</h2>     
+        <div id="titulo">
+            <a class="titulo"  href="abstract.html"><img class="icons" src="abstract logo.svg" alt="">ABSTRACT</a>
+            <div id="barra">&#124;</div>
+            <a class="titulo"  href="">CENTRO DE AJUDA</a>       
+        </div>  
+
+        <div id="icons">
+            <img class="icons" src="search.svg" alt=""> 
+            <img class="icons" src="list.svg" alt="">
+        </div>
     </header>
     <div id="principal">
         <h1>O que voce precisa?</h1>
@@ -29,7 +38,7 @@
                     gerencie, <br> versione e documente 
                     seus <br> designs em um só lugar.</p>
                     <br>
-                    <a href="">Usar o Abstract</a>
+                    <a href="">Usar o Abstract <img class="icon" src="arrow-right.svg" alt=""></a>
             </div>
         </main>
            <main class="corpo">
@@ -42,7 +51,7 @@
                     conta, como<br> seu e-mail, detalhes do 
                     perfil e senha.</p>
                     <br>
-                    <a href="">Gerencie sua conta</a>
+                    <a href="">Gerencie sua conta <img class="icon" src="arrow-right.svg" alt=""></a>
              </div>
            </main>
         </div>
@@ -75,7 +84,7 @@
                    equipes e projetos <br> para organizar 
                    suas <br>pessoas e seu trabalho.</p>
                    <br>
-                   <a href="">Ver equiper e projetos</a>
+                   <a href="">Ver equiper e projetos <img class="icon" src="arrow-right.svg" alt=""></a>
             </div>
 
         </main>
@@ -88,7 +97,7 @@
                 <h3>Gerenciar faturamento</h3> 
                 <p>Alterar assinaturas e detalhes de pagamento.</p>
                 <br>
-                <a href="">Gerenciar</a>
+                <a href="">Gerenciar <img class="icon" src="arrow-right.svg" alt=""></a>
             </div>
         </main>
         </div>
@@ -116,7 +125,7 @@
                 <p>Configure o SSO, SCIM e <br>
                    provisionamento Just-in-Time.</p>
                    <br>
-                   <a href="">Autenticar</a>
+                   <a href="">Autenticar <img class="icon" src="arrow-right.svg" alt=""></a>
             </div>
 
         </main >
@@ -130,7 +139,7 @@
                 <h3>Suporte abstrato</h3> 
                 <p>Entre em contato com um humano.</p>
                 <br>
-                <a href="contato-humano/contato.html">Conversar </a>
+                <a href="contato-humano/contato.html">Conversar <img class="icon" src="arrow-right.svg" alt=""> </a>
             
             </div>
         </main>
@@ -141,6 +150,9 @@
         <h2>Contados</h2>
         <a href="/tela-inicial.html">Site inicial</a>
         <p>infor-contado@gmail.com</p>
+        <code>© Copyright 2024</code>
+        <p>Abstract Studio Design, Inc.</p>
+        <p>All rights reserved</p>
         
     </footer>
 </body>
