--- a/copio-so-nao-faço-igual/music/tela-inicial.html
+++ b/copio-so-nao-faço-igual/music/tela-inicial.html
@@ -13,8 +13,13 @@
           <p>esses plano sao planos simplismente a preço de banana e quase de graça </p>
           <div id="anuncio">
             <img id="icon-music" src="images/icon-music.svg" alt="">
-            <p>Sem Anuncio R$400,00</p>
+            <div id="preço">
+              <p>Sem Anuncio R$400,00</p> 
+              <p>10X de 40R$ com juros</p>
+            </div>
+            
           </div>
+          
           <br>
           <button id="comprar">Comprar</button> <br>
           <button id="nao-quero">Não Quero</button>
