--- a/filmes-main/filmes_terror/terror.html
+++ b/filmes-main/filmes_terror/terror.html
@@ -10,6 +10,53 @@
 <body>
    <h1>Terror</h1>
    <h3>Total de Filmes:101</h3>
+   
+   <a href="desaparecida.html"><img src="fotos/desaparecida.jpg" alt=""></a>
+   <a href="ecos-ecos-ecos-ecos-do-alem.html"><img src="fotos/eco eco eco ecos do alem.jpg" alt=""></a>
+   <a href="13-exorcismos.html"><img src="fotos/13 exorcismos.jpg" alt=""></a>
+   <a href="apenas-corra.html"><img src="fotos/apenas corra.jpg" alt=""></a>
+   <a href="o-convento.html"><img src="fotos/o convento.webp" alt=""></a>
+   <a href="traumas-do-passad.html"><img src="fotos/traumas do passado.jpg" alt=""></a>
+   <a href="rua-dos-pecados.html"><img src="fotos/rua dos pecado.jpg" alt=""></a>
+   <a href="bata-antes-de-entrar.html"><img src="fotos/bata antes de entrar.webp" alt=""></a>
+   <a href="realidade-paralelas.html"><img src="fotos/realidade paralelas.jpg" alt=""></a>
+   <a href="sob-o-dominio-do-mal.html"><img src="fotos/sob o dominio do mal.jpg" alt=""></a>
+   <a href="observador2022.html"><img src="fotos/observador.jpg" alt=""></a>
+   <a href="exorcista-do-papa.html"><img src="fotos/o exorcista do papa.jpg" alt=""></a>
+   <a href="frio-nos-ossos.html"><img src="fotos/frio nos ossos.webp" alt=""></a>
+   <a href="o-manicomio.html"><img src="fotos/o manicomio.jpg" alt=""></a>
+   <a href="sobrenatural-porta-vermelha.html"><img src="fotos/sobrenatural a porta vermelha.webp" alt=""></a>
+   <a href="o-segredo-da-cabana.html"><img src="fotos/o segredo da cabana.jpg" alt=""></a>
+   <a href="o-masacre2018.html"><img src="fotos/o massacre 2018.jpg" alt=""></a>
+   <a href="todos-os-meus-amigos-estao-mortos.html"><img src="fotos/todos os meus amigos estao mortos.jpg" alt=""></a>
+   <a href="possesao-demoniaca.html"><img src="fotos/possessao demoniaca.jpg" alt=""></a>
+   <a href="o-culpado.html"><img src="fotos/o culpado.webp" alt=""></a>
+   <a href="a-ultima-casa.html"><img src="fotos/a ultima casa.webp" alt=""></a>
+   <a href="jack-a-caixa-maldita.html"><img src="fotos/jack a caixa maldita.jpg" alt=""></a>
+   <a href="jack-a-caixa-maldita2.html"><img src="fotos/jack a caixa maldita 2.jpg" alt=""></a>
+   <a href="a-morte-convida-para-dançar.html"><img src="fotos/a morte de convida para dançar.jpg" alt=""></a>
+   <a href="a-face-oculta-do-mal.html"><img src="fotos/a face oculta do mal.webp" alt=""></a>
+   <a href="a-lenda-de-crone-wood.html"><img src="fotos/a lenda de crone wood.jpg" alt=""></a>
+   <a href="o-meme-do-mal.html"><img src="fotos/o meme do mal.jpg" alt=""></a>
+   <a href="obsessao2015.html"><img src="fotos/obsessao 2015.webp" alt=""></a>
+   <a href="panico-na-floresta.html"><img src="fotos/panico na floresta 1.jpg" alt=""></a>
+   <a href="o-telefone-preto.html"><img src="fotos/o-telefone-preto-.jpg" alt=""></a>
+   <a href="encontro.com.html"><img src="fotos/encontro-com.webp" alt=""></a>
+   <a href="jerusalem2015.html"><img src="fotos/jesusalem 2015.jpg" alt=""></a>
+   <a href="boneco-do-mal.html"><img src="fotos/boneco do mal.webp" alt=""></a>
+   <a href="boneco-do-mal2.html"><img src="fotos/boneco do mal 2.webp" alt=""></a>
+   <a href="noite-do-terror2.html"><img src="fotos/noite-de-terror-2.jpg" alt=""></a>
+   <a href="a-autopsia.html"><img src="fotos/autopsia.jpg" alt=""></a>
+   <a href="caçada.html"><img src="fotos/a caçada.jpg" alt=""></a>
+   <a href="jovens-malditos.html"><img src="fotos/jovens malditos.jpg" alt=""></a>
+   <a href="estrada-maldita.html"><img src="fotos/estrada malditas.webp" alt=""></a>
+   <a href="megan.html"><img src="fotos/megan.webp" alt=""></a>
+   <a href="espantalho2010.html"><img src="fotos/espantalho 2010.jpg" alt=""></a>
+   <a href="convide-maldito.html"><img src="fotos/convide maldito.jpg" alt=""></a>
+   <a href="terror-na-estrada.html"><img src="fotos/terror na estrada.jpg" alt=""></a>
+   <a href="pandorum.html"><img src="fotos/pandrum.jpg" alt=""></a>
+   <a href="margaux.html"><img src="fotos/margaux.jpg" alt=""></a>
+   <a href="misterio-da-floresta.html"><img src="fotos/o misterio da floresta.webp" alt=""></a>
    <a href="ouija.html"><img src="fotos/ouija invocando o mal.jpg" alt=""></a>
    <a href="colecionador-de-corpos.html"><img src="fotos/o colecionador de crpos.webp" alt=""></a>
    <a href="a-vila.html"><img src="fotos/a vila.jpg" alt=""></a>
@@ -32,11 +79,13 @@
    <a href="oferenda-ao-demonio.html"><img src="fotos/oferenda ao demonio.jpg" alt=""></a>
    <a href="desafio(2020).html"><img src="fotos/desafi0 (2020).webp" alt=""></a>
    <a href="venus(2022).html"><img src="fotos/venus(2022).jpg" alt=""></a>
+   <a href="desseseis-facadas.html"><img src="fotos/desesesis facadas.jpg" alt=""></a>
    <a href="um-lugar-silencioso1.html"><img src="fotos/um lugar silencioso 1.webp" alt=""></a>
    <a href="a-morte-do-demonio1.html"><img src="fotos/a morte do demonio 1.jpg" alt=""></a>
    <a href="a-morte-do-demonio2.html"><img src="fotos/a morte do demonio 2.jpg" alt=""></a>
    <a href="presos-no-gelo2.html"><img src="fotos/presos no gelo 2.jpg" alt=""></a>
    <a href="cemiterio-maldito.html"><img src="fotos/Cemitério_maldito(1989).jpg" alt=""></a>
+   <a href="cemiterio-maldito2.html"><img src="fotos/cemiterio maldito.jpg" alt=""></a>
    <a href="noites-brutais.html"><img src="fotos/noites brutais.webp" alt=""></a>
    <a href="a-presa.html"><img src="fotos/a presa.jpg" alt=""></a>
    <a href="escolha-ou-morra.html"><img src="fotos/escolha ou morte.jpg" alt=""></a>
