--- a/escola/matematica/1 -ano.html
+++ b/escola/matematica/1 -ano.html
@@ -9,24 +9,36 @@
 <body>
     <h1>Aulas de Matemeticas do 1 ano</h1>
     <h2>Adição</h2>
-    <p>07 + 10 = <span>17</span></p> <input id="Q1" type="text"> <button onclick="calcular()">conferir</button>
+    <p>07 + 10 = </p> <input id="Q1" type="text">  <button onclick="calcular()">conferir</button>
     <p id="resultadoQ1"></p>  
     <br>
 
-    <p>09 + 12 = <span>21</span></p> <input id="Q2" type="text"> <button>conferir</button>
-    <p id="resultadoQ2"></p>
+    <p>17 + 13 = </p> <input id="Q2" type="text">  <button onclick="calcula()">conferir</button>
+    <p id="resultadoQ2"></p>  
     <br>
 
-    <p>12 + 21 =</p> <span>33</span> <input id="Q3" type="text"> <button>conferir</button>
-    <p id="resultadoQ3"></p>
+
+    <p>07 + 10 = </p> <input id="Q3" type="text">  <button onclick="calcul()">conferir</button>
+    <p id="resultadoQ3"></p>  
     <br>
 
-    <p>15 + 12 =</p> <span>27</span> <input id="Q4" type="text"> <button>conferir</button>
-    <p id="resultadoQ4"></p>
+
+
+    <p>07 + 10 = </p> <input id="Q4" type="text">  <button onclick="calcu()">conferir</button>
+    <p id="resultadoQ4"></p>  
     <br>
 
-    <p>23 + 24 =</p> <span>47</span> <input Q type="text"> <button>conferir</button>
-    <p id="resultadoQ5"></p>
+
+
+    <p>07 + 10 = </p> <input id="Q1" type="text">  <button onclick="calcular()">conferir</button>
+    <p id="resultadoQ1"></p>  
+    <br>
+
+
+    <p>07 + 10 = </p> <input id="Q1" type="text">  <button onclick="calcular()">conferir</button>
+    <p id="resultadoQ1"></p>  
+    <br>
+
 
  <script src="1 -ano.js"></script>
 </body>
