--- a/musica/tela-inicial.html
+++ b/musica/tela-inicial.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -12,8 +13,32 @@
     </header>
 
     <nav>
-     <h2>Musicas</h2>
-
+     
+    <a href="">Musicas</a>
+   <p onclick="recente()">Recentes</p>
+    <p onclick="cantores()">cantores</p>
     </nav>
+    <main id="recentes">
+       <a href="musicas/gospel/valesca mayssa/arvore-cortada.html"><img class="video" src="musicas/gospel/valesca mayssa/capa arvore cortada.jpg" alt=""></a>
+       <a href=""></a>
+       <a href=""></a>
+       <a href=""></a>
+       <a href=""></a>
+       <a href=""></a>
+       <a href=""></a>
+       <a href=""></a>
+       <a href=""></a>
+       <a href=""></a>
+       <a href=""></a>
+       <a href=""></a>
+       <a href=""></a>
+
+    </main>
+
+    <main id="cantores">
+        <a href="cantores/golpel/valesca mayssa/valesca-mayssa.html"><img class="imagem" src="cantores/golpel/valesca mayssa/foto-valesca mayssa.jpg" alt=""></a>
+        <a href="cantores/golpel/maria marçal/maria-marcal.html"><img class="imagem" src="cantores/golpel/maria marçal/foto maria-marcal.webp" alt=""></a>
+    </main>
+    <script src="music.js"></script>
 </body>
 </html>
