--- a/copio-so-nao-faço-igual/tela-copia.html
+++ b/copio-so-nao-faço-igual/tela-copia.html
@@ -22,6 +22,13 @@
     <div>  <a href="music/tela-inicial.html">Music</a></div>
     <div>  <a href="n/tela-inicial.html">Artigo</a></div>
     <div>  <a href="abstract/abstract.html">Abstract</a></div>
+    <div>  <a href="curso-de-programaçao/tela-inicial.html">Curso de Programaçao</a></div>
+    <div>  <a href="youtube/youtube.html">Youtube</a></div>
+    <div>  <a href="n/tela-inicial.html">Artigo</a></div>
+    <div>  <a href="n/tela-inicial.html">Artigo</a></div>
+    <div>  <a href="n/tela-inicial.html">Artigo</a></div>
+    <div>  <a href="n/tela-inicial.html">Artigo</a></div>
+    <div>  <a href="n/tela-inicial.html">Artigo</a></div>
    
 
 
