--- a/musica/musicas/gospel/valesca mayssa/arvore-cortada.html
+++ b/musica/musicas/gospel/valesca mayssa/arvore-cortada.html
@@ -9,20 +9,20 @@
 <body>
     <h1>logo</h1>
     <h2>Arvore Cortada</h2>
-        <h3> De Valesca Mayssa</h3>
+        <h3 id="aj"> De Valesca Mayssa</h3>
     <main>
         
         
-        <video controls src="Valesca Mayssa l Árvore Cortada [Clipe Oficial].mp4"></video>
+        <video controls poster="capa arvore cortada.jpg" src="Valesca Mayssa l Árvore Cortada [Clipe Oficial].mp4"></video>
         <div id="letra">
-        <a href=""></a>
+        <a onclick="letras()" href="#aparece">Ver Letra</a>
             <p id="aparece">
                 Cortaram, a árvore cheio de vida, cortaram<br>
                 E os frutos que ela produzia, se acabaram<br>
                 E chega alguém e diz, acabou a história aqui<br>
                 Mas ainda bem, que a resposta vem do céu,<br>
                 e a última palavra, quem determina ainda é Deus<br>
-                Alguém diz, só restou raiz,<br>
+                Alguém diz, só restou raiz,<br >
                 mas Deus diz tem vida aí, e eu vou restituir<br> <br>
                 Há esperança para árvore cortada,<br>
                 novamente crescerá ao cheiro das águas,<br>
