--- a/musica/tela-inicial.html
+++ b/musica/tela-inicial.html
@@ -20,7 +20,7 @@
     </nav>
     <main id="recentes">
        <a href="musicas/gospel/valesca mayssa/arvore-cortada.html"><img class="video" src="musicas/gospel/valesca mayssa/capa arvore cortada.jpg" alt=""></a>
-       <a href=""></a>
+       <a href="musicas/gospel/valesca mayssa/boa-obra.html"><img class="video" src="musicas/gospel/valesca mayssa/capa boa obra.jpg" alt=""></a>
        <a href=""></a>
        <a href=""></a>
        <a href=""></a>
