--- a/musica/cantores/golpel/valesca mayssa/valesca-mayssa.html
+++ b/musica/cantores/golpel/valesca mayssa/valesca-mayssa.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Musica Da Cantora Valesca Mayssa</h1>
-    <a href="/musica/musicas/gospel/valesca mayssa/arvore-cortada.html">arvore cortada</a>
+   
+    <a href="https://deriky2019.github.io/batata/musica/musicas/gospel/valesca%20mayssa/arvore-cortada.html">Arvore Cortada</a> 
+    <br>
+    <br>
+    <br>
+    <a href="https://deriky2019.github.io/batata/musica/musicas/gospel/valesca%20mayssa/boa-obra.html">Boa Obra</a>
+    <br>
+    <br>
+    <br>
+    <a href=""></a>
+    <br>
+    <br>
+    <br>
+    <a href=""></a>
 </body>
 </html>
