--- a/copio-so-nao-faço-igual/tela-copia.html
+++ b/copio-so-nao-faço-igual/tela-copia.html
@@ -11,7 +11,7 @@
     
     <div>  <a href="cmsp/cmsp.html">CmSp</a></div>
     <div>  <a href="netflix/netflix.html">NETFLIX</a></div>
-    <div>  <a href="teste.html">Testes DEV</a></div>
+    <div>  <a href="teste/teste.html">Testes DEV</a></div>
     <div>  <a href="time-vasco/vasco.html">Vasco</a></div>
     <div>  <a href="sproutGigs/tela-inicial.html">SproutGigs</a></div>
     <div>  <a href="tiktok/tiktok.html">Tiktok</a></div>
@@ -24,11 +24,11 @@
     <div>  <a href="abstract/abstract.html">Abstract</a></div>
     <div>  <a href="curso-de-programaçao/tela-inicial.html">Curso de Programaçao</a></div>
     <div>  <a href="youtube/youtube.html">Youtube</a></div>
-    <div>  <a href="n/tela-inicial.html">Artigo</a></div>
-    <div>  <a href="n/tela-inicial.html">Artigo</a></div>
-    <div>  <a href="n/tela-inicial.html">Artigo</a></div>
-    <div>  <a href="n/tela-inicial.html">Artigo</a></div>
-    <div>  <a href="n/tela-inicial.html">Artigo</a></div>
+    <div>  <a href="formulario01/formulario01.html">formulario01</a></div>
+    <div>  <a href="ableton/ableton.html">Ableton</a></div>
+    <div>  <a href="cafe/cafe.html">Coffee</a></div>
+    <div>  <a href="alarado/alarado.html">Alarado</a></div>
+    <div>  <a href="music-player/music-player.html">Music-player</a></div>
    
 
 
