--- a/copio-so-nao-faço-igual/time-vasco/sobre.html
+++ b/copio-so-nao-faço-igual/time-vasco/sobre.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Historia</h1>
-    <p>Claro! O Club de Regatas Vasco da Gama, mais conhecido como Vasco, é um dos clubes de futebol mais tradicionais do Brasil, fundado em <strong>1898</strong> por um grupo de remadores no Rio de Janeiro. O nome foi inspirado no navegador português Vasco da Gama.
+    <p>O Club de Regatas Vasco da Gama, mais conhecido como Vasco, é um dos clubes de futebol mais tradicionais do Brasil, fundado em <strong>1898</strong> por um grupo de remadores no Rio de Janeiro. O nome foi inspirado no navegador português Vasco da Gama.
 
         A história do Vasco é marcada por conquistas e momentos memoráveis. Um dos pontos altos foi a conquista do Campeonato Sul-Americano de 1948, considerado o precursor da atual Copa Libertadores da América. O Vasco foi o primeiro clube brasileiro a conquistar esse título, derrotando o River Plate, da Argentina, na final.
         
