--- a/musica/tela-inicial.html
+++ b/musica/tela-inicial.html
@@ -14,7 +14,7 @@
 
     <nav>
      
-    <a href="">Musicas</a>
+    <a href="musica/musica.html">Musicas</a>
    <p onclick="recente()">Recentes</p>
     <p onclick="cantores()">cantores</p>
     </nav>
