--- a/receitas/receitas.html
+++ b/receitas/receitas.html
@@ -46,6 +46,8 @@
     <h3>CupCake</h3>
     <a href="#"><img class="receita" src="cupcake-removebg-preview.png" alt=""></a>
    </div>
+   
+   
   
   
   
@@ -58,7 +60,12 @@
 
 
 
-
+<div id="resto">
+       <div>
+        <h3>omelete simples</h3>
+        <a href="omelete simples/omelete.html"><img class="receita" src="omelete simples/logo-omelete.avif" alt=""></a>
+       </div>
+   </div>
 
 
 
