--- a/copio-so-nao-faço-igual/curso-de-programaçao/tela-inicial.html
+++ b/copio-so-nao-faço-igual/curso-de-programaçao/tela-inicial.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header onclick="sair()">
         <img src="imagem/banner.jpg" alt="">
     </header>
-    <nav>
+    <nav onclick="sair()">
         <a href="">Sobre</a>
         <a href="">Inicio</a>
         <a href="cursos/curso.html">Curso</a>
