--- a/copio-so-nao-faço-igual/time-vasco/vasco.html
+++ b/copio-so-nao-faço-igual/time-vasco/vasco.html
@@ -14,7 +14,7 @@
     <nav id="nav">
        <a href="sobre.html">Sobre</a>
        <a href="#">inicio</a>
-       <a href="#">jogos</a>
+       <a href="#">Jogos</a>
        <a href="lendas.html">Lendas</a>
     </nav>
     <main>
