--- a/copio-so-nao-faço-igual/teste/teste.html
+++ b/copio-so-nao-faço-igual/teste/teste.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hyper Tree - Página Inicial</title>
+    <title>Hyper Tree - Págin fsvftyuyufgyufytfghfyfa Inicial</title>
     <link rel="stylesheet" href="teste.css">
 </head>
 
@@ -45,7 +45,9 @@
   </main>
     
     
+  <div onclick="crescer()" id="circulo"></div>
     <script src="teste.js"></script>
+    <p id="pontuacao">0</p>
 </body>
 
 </html>
