--- a/tela-inicial.html
+++ b/tela-inicial.html
@@ -15,26 +15,26 @@
     </li>
   </ul>
   <div class="imagem">
-    <img src="zoto minha.jpg" alt="">
+    <img src="fotos-inicio/zoto minha.jpg" alt="">
  </div>
     
   
 <h2>Sobre</h2>
 <h3> Meu nome é deriky e eu estou aprendendo a programar, eu quero trabalhar nessa área, e eu estou estudando HTML, CSS e JavaScript e isso e apenas o começo, mas no futuro eu quero aprender a criar app no mobile, Estou ainda aprendendo enta ainda vou melhorar muito
   e aprendendo a cada dia </h3>
-<h2>Projetos</h2>
+<h2>Projetos Recentes</h2>
 <h3>HyperTwo</h3>
-<div class="projetoDIV"><a href="filmes-main/tela_inicial.html"><img class="PROJETOS" src="projeto-hyper two.png" alt=""></a></div>
+<div class="projetoDIV"><a href="filmes-main/tela_inicial.html"><img class="PROJETOS" src="fotos-inicio/projeto-hyper two.png" alt=""></a></div>
 <p>Hiper two e um site onde voce pode assistr filmes completos dublados e de todos as epoca </p>
 <h3>HyperPizza</h3>
-<div class="projetoDIV"><a href="receitas/receitas.html"><img class="PROJETOS" src="projetos-receitas.png" alt=""></a></div>
+<div class="projetoDIV"><a href="receitas/receitas.html"><img class="PROJETOS" src="fotos-inicio/projetos-receitas.png" alt=""></a></div>
 <p>HyperPizza e um site onde vc pode ver receitas pratica e caseiras e muito deliciosa</p>
 <h3>Pessoal</h3>
-<div class="projetoDIV"><a href="copio-so-nao-faço-igual/pessoal/pessoal.html"><img class="PROJETOS" src="projetos-pessoal.png" alt=""></a></div>
+<div class="projetoDIV"><a href="copio-so-nao-faço-igual/pessoal/pessoal.html"><img class="PROJETOS" src="fotos-inicio/projetos-pessoal.png" alt=""></a></div>
 <p>Esse e um site que é pessoal onde mostra todos os meus perfil no github e no front-end challends que foi onde eu vi esse projeto e tentei fazer tamem tem outros projeto que voce ver</p>
  
 <h3>Abstract</h3>
-<div class="projetoDIV"><a href="copio-so-nao-faço-igual/abstract/abstract.html"><img class="PROJETOS" src="projetos-abstract.png" alt=""></a></div>
+<div class="projetoDIV"><a href="copio-so-nao-faço-igual/abstract/abstract.html"><img class="PROJETOS" src="fotos-inicio/projetos-abstract.png" alt=""></a></div>
 <p>Site que eu fiz foi um desafio do front-mentor foi um site muito legal de fazer e nele aprendi muitas coisas importante</p>
  
 
