--- a/projetos/nova vida com cristo/tela-inicial.html
+++ b/projetos/nova vida com cristo/tela-inicial.html
@@ -16,7 +16,7 @@
     <nav>
       <p id="principal" onclick="voltar()">Sobre</p>
       <p onclick="igrejas()" id="aparecer">Igrejas</p>
-      <a href="#">Pregaçoes</a>
+      <a target="_blank" href="https://www.facebook.com/novavidacomcristorobru">Pregaçoes</a>
     </nav>
     <main id="sobre">
         <h1>BEM-VINDO À <br> NOVA VIDA COM CRISTO</h1>
@@ -46,6 +46,8 @@
            </div>
         </div>
         
+    <p class="linha">______________________</p>
+
 
     <div class="igrejas">
         
@@ -63,6 +65,11 @@
     </div>
 
 
+
+    <p class="linha">______________________</p>
+
+
+
     <div class="igrejas">
         <img src="imagem/lageado.png" alt="">
         <div>
@@ -76,6 +83,8 @@
     </div>
 
 
+
+    <p class="linha">______________________</p>
 
 
 
@@ -95,6 +104,8 @@
 
 
 
+    <p class="linha">______________________</p>
+
 
     <div class="igrejas">
         <img src="imagem/emerlino.webp" alt="">
@@ -112,6 +123,7 @@
 
 
 
+    <p class="linha">______________________</p>
 
 
     <div class="igrejas">
