--- a/projetos/nova vida com cristo/tela-inicial.html
+++ b/projetos/nova vida com cristo/tela-inicial.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nova Vida Com Cristo</title>
     <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="shortcut icon" href="imagem/android-chrome-512x512.png" type="image/png">
 <body>
     <header>
         <div><img src="imagem/banner (2).png"></div>
