--- a/projetos/filmes-main/filmes_suspense/filmes-suspense.html
+++ b/projetos/filmes-main/filmes_suspense/filmes-suspense.html
@@ -29,8 +29,189 @@
      <a href="premoniçao3.html"><img src="fotos/premoniçao3.jpg" alt=""></a>
      <a href="premoniçao4.html"><img src="fotos/premoniçao4.jpg" alt=""></a>
      <a href="premoniçao5.html"><img src="fotos/premoniçao5.webp" alt=""></a>
+     <a href="Assassinato no Expresso do Oriente.html"><img src="fotos/Assassinato no Expresso do Oriente.jpg" alt=""></a>
      <a href="fratura2019.html"><img src="fotos/foto-fratura.jpg" alt=""></a>
+     <a href="o menu.html"><img src="fotos/o menu 2022.jpg" alt=""></a>
+     <a href="a vingança perfeita.html"><img src="fotos/vingança perfeita 2018.jpg" alt=""></a>
+     <a href="nuvem rosa.html"><img src="fotos/nuvem rosa.jpg" alt=""></a>
+     <a href="ate a morte.html"><img src="fotos/ate a morte.jpg" alt=""></a>
+     <a href="um contratempo.html"><img src="fotos/contratiempo.jpg" alt=""></a>
+     <a href="casa do medo.html"><img src="fotos/casa do medo incidente em ghosiland.jpg" alt=""></a>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+     <h1>Sies Externos</h1>
+     <a href="https://www.runtime.tv/pt-br/feature/p2-sem-saida"><img src="fotos/P2 sem saida.jpg" alt=""></a>
+     <a href="https://www.runtime.tv/pt-br/feature/panico-na-neve"><img src="fotos/Panico_Na_Neve-.webp" alt=""></a>
+     <a href="https://www.runtime.tv/pt-br/feature/possuida-pelo-mal"><img src="fotos/possuida pel mal.webp" alt=""></a>
+     <a href="https://www.runtime.tv/pt-br/feature/refens-do-mal"><img src="fotos/refens do mal.jpg" alt=""></a>
+     <a href="https://www.runtime.tv/pt-br/feature/revelacoes"><img src="fotos/revelaçoes 2004.webp" alt=""></a>
+     <a href="https://www.runtime.tv/pt-br/feature/sonata-maldita"><img src="fotos/sonata maldita.jpg" alt=""></a>
+     <a href="https://www.runtime.tv/pt-br/feature/tentacao"><img src="fotos/a tentaçao.jpg" alt=""></a>
+     <a href="https://www.runtime.tv/pt-br/feature/assassinatos-do-passado"><img src="fotos/assassinatos do passado.jpg" alt=""></a>
+     <a href="https://www.runtime.tv/pt-br/feature/estranho-mas-verdade"><img src="fotos/estranho-mas-verdade-poster.webp" alt=""></a>
+     <a href="https://www.runtime.tv/pt-br/feature/eu-sei-onde-voce-mora"><img src="fotos/eu sei onde voce mora.jpg" alt=""></a>
+     <a href="https://www.runtime.tv/pt-br/feature/grito-de-panico"><img src="fotos/grito de panico.webp" alt=""></a>
+     <a href="https://www.runtime.tv/pt-br/feature/cubo"><img src="fotos/Cubo_(filme).jpg" alt=""></a>
+     <a href="https://www.runtime.tv/pt-br/feature/um-plano-brilhante"><img src="fotos/um plano brilhante.jpg" alt=""></a>
+     <a href="https://www.runtime.tv/pt-br/feature/vitimas-do-escuro"><img src="fotos/vitimas no escuro.jpg" alt=""></a>
+     <a href="https://www.runtime.tv/pt-br/feature/sono-mortal"><img src="fotos/sono  mortal.jpg" alt=""></a>
+     <a href="https://www.runtime.tv/pt-br/feature/o-misterio-da-passagem-da-morte"><img src="fotos/o misterio da passagem da morte.jpg" alt=""></a>
+     <a href=""></a>
 
+     <a href=""></a>
+     <a href=""></a>
+     <a href=""></a>
 
 
 
