--- a/projetos/tela-copia.html
+++ b/projetos/tela-copia.html
@@ -60,7 +60,7 @@
 
 <span>
  <div>  
-    <a href="formulario01/formulario01.html">formulario01  <br>
+    <a href="formularios/formularios.html">formulario01  <br>
     <img src="z-imagem/formulario 1.png" alt=""></a>
   </div>
 
@@ -121,8 +121,13 @@
   <a href="eu no supremarcaco/tela-inicial.html"> <img src="z-imagem/eunosupermercado.png" alt=""></a> 
 </div>
 
+<div>
+    
 <a href="curisidades-antigas/tela-inicial.html">Curiodidades antigas <br> 
     <img src="z-imagem/historias dos tempos antigod.png" alt=""></a>
+
+</div>
+
 </span>
 
 
@@ -130,12 +135,51 @@
 
 
 <span>
-    <a href="nauto/tela-inicial.html">Nauto <br>
+
+
+    <div>
+           <a href="nauto/tela-inicial.html">Nauto <br>
 <img src="z-imagem/nauto.png" alt=""></a>
+    </div>
+ 
+
+
+<div>
+    <a href="google/tela-inicial.html">Google <br>
+    <img src="z-imagem/google.png" alt=""></a>
+</div>
+
+
+
+
+
+
+
+
+ <div>
+  
+<a href="huddie/tela-inicial.html">Huddle <br>
+ <img src="z-imagem/huddle.png" alt=""></a>  
+ </div>
+
+
+
+
+
+
+
 </span>
 
 
+<a href="grid de preços/tela-inicial.html">oioioi</a>
 
+
+
+
+
+ <br>
+
+<a href="youtube/youtube.html">Youtubr</a>
 
 
 
