--- a/projetos/filmes-main/tela_inicial.html
+++ b/projetos/filmes-main/tela_inicial.html
@@ -10,6 +10,7 @@
 </head>
 <body id="mudar">
    <header id="hyper">
+    <img src="logo_H Celular.png" alt="">
       <h1 id="h1Especial">HYPER TWO</h1>
       <span id="menu"><p id="temas">TEMAS</p> 
         <span id="sub-menu">
