--- a/projetos/games/jogos/h/heroic battle.html
+++ b/projetos/games/jogos/h/heroic battle.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <iframe src="https://player.twitch.tv/?video=2204812677&parent=https://deriky2019.github.io/batata/projetos/games/jogos/h/heroic%20battle.html" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+    <iframe src="https://player.twitch.tv/?video=2204812677&parent=deriky2019.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
 
 
   </body>
