--- a/projetos/filmes-main/filmes_ação/açaô.html
+++ b/projetos/filmes-main/filmes_ação/açaô.html
@@ -7,6 +7,29 @@
     <link rel="stylesheet" href="style-ação.css">
 </head>
 <body>
+    <a href="corrida mortal1.html"><img src="fotos/corrida moral 1.jpg" alt=""></a>
+    <a href="corrida mortal2.html"><img src="fotos/corrida mortal 2.webp" alt=""></a>
+    <a href="corrida mortal3.html"><img src="fotos/corrida moral 3.jpg" alt=""></a>
+    <a href="corrida mortal4.html"><img src="fotos/corrida moral 4.jpg" alt=""></a>
+    <a href="22milhas.html"><img src="fotos/22 miljas.jpg" alt=""></a>
+    <a href="o mestre das sombras.html"><img src="fotos/o mestre das sombras.jpg" alt=""></a>
+    <a href="esquema de risco.html"><img src="fotos/esquema de risco operaçao fortuna.jpg" alt=""></a>
+    <a href="a guerra final.html"><img src="fotos/guerra final.jpg" alt=""></a>
+    <a href="a profissional.html"><img src="fotos/a profissional.jpg" alt=""></a>
+    <a href="ninja assassino.html"><img src="fotos/ninja assasino.webp" alt=""></a>
+    <a href="o pacto.html"><img src="fotos/o pacto 2023.jpg" alt=""></a>
+    <a href="mergulho radical.html"><img src="fotos/mergulho radical.jpg" alt=""></a>
+    <a href="missao impossivel.html"><img src="fotos/missao impossivel.jpg" alt=""></a>
+    <a href=""></a>
+    <a href="missao impossivel3.html"><img src="fotos/missao impossivel 3.webp" alt=""></a>
+    <a href="o dia depois de amanha.html"><img src="fotos/o dia depois d amanha.webp" alt=""></a>
+    <a href="o homem do norte.html"><img src="fotos/o homem do norte.jpg" alt=""></a>
+    <a href="atomica2017.html"><img src="fotos/atomica.webp" alt=""></a>
+    <a href="inimigo do estado.html"><img src="fotos/inimigo do estado.jpg" alt=""></a>
+    <a href="transfusao.html"><img src="fotos/transfusao.jpg" alt=""></a>
+    <a href="operaçao invasao.html"><img src="fotos/operaçao invasao.webp" alt=""></a>
+    <a href="missao sobrevivencia.html"><img src="fotos/missao de sobrevivencia.jpg" alt=""></a>
+    <a href="destino a deriva.html"><img src="fotos/destino a deriva.webp" alt=""></a>
     <a href="mais-um-tiro-certo.html"><img src="fotos/mais um tiro certo.jpg" alt=""></a>
     <a href="donzela.html"><img src="fotos/donzela.jpg" alt=""></a>
     <a href="mergulho-noturno.html"><img src="fotos/mergulho noturno.jpg" alt=""></a>
