--- a/projetos/filmes-main/filmes_romantico/filmes-romanticos.html
+++ b/projetos/filmes-main/filmes_romantico/filmes-romanticos.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style-romantico.css">
 </head>
 <body>
-    
+    <a href="todo dia.html"><img src="fotos/todo dia.jpg" alt=""></a>
     <a href="fica-comigo.html"><img src="fotos/fica comigo.webp" alt=""></a>
     <a href="sex-appeal.html"><img src="fotos/sex appel.webp" alt=""></a>
     <a href="votos-de-amor.html"><img src="fotos/votos de amor.jpg" alt=""></a>
