--- a/tela-inicial.html
+++ b/tela-inicial.html
@@ -10,7 +10,7 @@
   <header>
     <div>
       <img id="zoto" src="fotos-inicio/zoto minha.jpg" alt="">
-      <div><h3>Meu nome é deriky e eu estou aprendendo a programar, eu quero trabalhar nessa área, eu estou estudando  <br> HTML, CSS e JavaScript e isso e apenas o começo, mas no futuro eu quero aprender a criar app no mobile, <br> Estou ainda aprendendo enta ainda vou melhorar muito e aprendendo a cada dia</h3></div>
+      <div><h3>Meu nome é deriky e eu estou aprendendo a programar, eu quero trabalhar nessa área, eu estou estudando  <br> HTML, CSS e JavaScript e isso e apenas o começo, mas no futuro eu quero aprender a criar app no mobile, <br> Estou ainda aprendendo e ainda vou melhorar muito e aprendendo a cada dia</h3></div>
       <img class="mudar" id="sol" onclick="escurecer()" src="fotos-inicio/sol cheio.svg" alt="">
       <img class="mudar" id="lua" onclick="clarear()" src="fotos-inicio/moon-fill.svg" alt="">
       
