--- a/projetos/filmes-main/ao vivo/todo mundo odeia o chis.html
+++ b/projetos/filmes-main/ao vivo/todo mundo odeia o chis.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <iframe src="https://player.twitch.tv/?channel=todomundo_hd&parent=deriky2019.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="500%" width="100%"></iframe>
+    <iframe src="https://player.twitch.tv/?channel=todomundo_hd&parent=deriky2019.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="500px" width="100%"></iframe>
 </body>
 </html>
