--- a/projetos/tela-copia.html
+++ b/projetos/tela-copia.html
@@ -162,7 +162,12 @@
  <img src="z-imagem/huddle.png" alt=""></a>  
  </div>
 
-
+ <div>
+  
+    <a href="grid de preços/tela-inicial.html">Grid de Preços <br>
+     <img src="z-imagem/grid.png" alt=""></a>  
+     </div>
+    
 
 
 
@@ -171,7 +176,16 @@
 </span>
 
 
-<a href="grid de preços/tela-inicial.html">oioioi</a>
+
+<span>
+
+    <div>
+  
+        <a href="livraria-page/tela-inicial.html">Livraria <br>
+         <img src="z-imagem/get logo circuo.png" alt=""></a>  
+         </div>
+        
+</span>
 
 
 
@@ -185,28 +199,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-<a href="livraria-page/tela-inicial.html">Site de nao sei</a>
-
-
-
-
-
-
-
-
  <a href="games/tela-inicial.html">games</a>
 
 <a href="lista de skill/lista-de-skill.html">Lista de Sikll</a> <br>
@@ -215,9 +207,9 @@
 
 
 
-<a href="steamblack/tela-inicial.html">Steam black</a>
+<a href="steamblack/tela-inicial.html">Steam black</a> <br>
 
-
+ <a href="trabalho/tela-inicial.html">trabalho escolar</a>
 
 </body>
 </html>
